--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
